--- a/sandbox.html
+++ b/sandbox.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script type="module" src="/src/extensions/sandbox.ts"></script>
+  <script type="module" src="/src/extensions/sandbox/index.ts"></script>
 </body>
 
 </html>
