--- a/extensions/sandbox/index.html
+++ b/extensions/sandbox/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sanbox</title>
 </head>
 
 <body>
-  <script type="module" src="/src/extensions/popup/main.tsx"></script>
+  <script type="module" src="/extensions/sandbox/index.ts"></script>
 </body>
 
 </html>
